--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/styles/tool-properties.css">
     <link rel="stylesheet" href="/styles/dynamic-positioning.css">
     <link rel="stylesheet" href="/styles/input-fixes.css">
+    <link rel="stylesheet" href="/styles/subscription-components.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
