feat(phase2): Create Button template and refactor components
- Create unified Button template component (components/shared/templates/Button.tsx)
- Create button template styles (styles/button-template.css)
- Create reusable hooks (useInteractionFeedback, useLoadingState)
- Refactor LeftSidebar to use Button template
- Refactor ProfessionalFileMenu to use Button template
- Remove inline styles from LeftSidebar and ProfessionalFileMenu
- Create sidebar-fixes.css for sidebar positioning

NO INLINE STYLES - All styling via CSS classes
NO HARD-CODED VALUES - All values use CSS variables
XIBALBA DESIGN SYSTEM COMPLIANCE - Orange accents, grey-on-grey, sharp geometric
REUSABLE COMPONENTS - Button template replaces duplicate patterns

Phase 2 Progress: 50% → 60%

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <link rel="stylesheet" href="/styles/interaction-polish.css">
     <link rel="stylesheet" href="/styles/file-menu-header.css">
     <link rel="stylesheet" href="/styles/canvas-area.css">
+    <link rel="stylesheet" href="/styles/button-template.css">
+    <link rel="stylesheet" href="/styles/sidebar-fixes.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
