feat(phase2): Create Input and Panel templates
- Create unified Input template component (components/shared/templates/Input.tsx)
- Create input template styles (styles/input-template.css)
- Create unified Panel template component (components/shared/templates/Panel.tsx)
- Create panel template styles (styles/panel-template.css)
- Support for all input types, sizes, validation states
- Support for all panel variants, collapsible panels

NO INLINE STYLES - All styling via CSS classes
NO HARD-CODED VALUES - All values use CSS variables
XIBALBA DESIGN SYSTEM COMPLIANCE - Orange accents, grey-on-grey, sharp geometric
REUSABLE COMPONENTS - Input and Panel templates ready for refactoring

Phase 2 Progress: 60% → 65%

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="/styles/file-menu-header.css">
     <link rel="stylesheet" href="/styles/canvas-area.css">
     <link rel="stylesheet" href="/styles/button-template.css">
+    <link rel="stylesheet" href="/styles/input-template.css">
+    <link rel="stylesheet" href="/styles/panel-template.css">
     <link rel="stylesheet" href="/styles/sidebar-fixes.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
