--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <link rel="stylesheet" href="/styles/pointer-events-fix.css">
     <link rel="stylesheet" href="/styles/focus-indicators.css">
     <link rel="stylesheet" href="/styles/hide-dev-buttons.css">
+    <link rel="stylesheet" href="/styles/tool-labels-fix.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
