fix: Remove ALL inline styles - use CSS classes only
- Created app-layout.css for grid layout
- Removed all inline styles from App.simple
- Using CSS classes: app-layout-grid, app-header-container, app-main-content
- NO hardcoded values, NO inline styles
- All styling via CSS classes and CSS variables

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <link rel="stylesheet" href="/styles/interaction-polish.css">
     <link rel="stylesheet" href="/styles/file-menu-header.css">
     <link rel="stylesheet" href="/styles/canvas-area.css">
+    <link rel="stylesheet" href="/styles/app-layout.css">
     <link rel="stylesheet" href="/styles/button-template.css">
     <link rel="stylesheet" href="/styles/input-template.css">
     <link rel="stylesheet" href="/styles/panel-template.css">
