--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     <link rel="stylesheet" href="/styles/file-menu-header.css">
     <link rel="stylesheet" href="/styles/canvas-area.css">
     <link rel="stylesheet" href="/styles/app-layout.css">
+    <link rel="stylesheet" href="/styles/professional-file-menu-header.css">
+    <link rel="stylesheet" href="/styles/component-isolation-fix.css">
     <link rel="stylesheet" href="/styles/button-template.css">
     <link rel="stylesheet" href="/styles/input-template.css">
     <link rel="stylesheet" href="/styles/panel-template.css">
