--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <link rel="stylesheet" href="/styles/professional-file-menu-header.css">
     <link rel="stylesheet" href="/styles/component-isolation-fix.css">
     <link rel="stylesheet" href="/styles/power-toolbar-positioning.css">
+    <link rel="stylesheet" href="/styles/power-toolbar-drag-handle.css">
     <link rel="stylesheet" href="/styles/button-template.css">
     <link rel="stylesheet" href="/styles/input-template.css">
     <link rel="stylesheet" href="/styles/panel-template.css">
