--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <link rel="stylesheet" href="/styles/component-isolation-fix.css">
     <link rel="stylesheet" href="/styles/power-toolbar-positioning.css">
     <link rel="stylesheet" href="/styles/power-toolbar-drag-handle.css">
+    <link rel="stylesheet" href="/styles/dev-chat-input-area.css">
     <link rel="stylesheet" href="/styles/button-template.css">
     <link rel="stylesheet" href="/styles/input-template.css">
     <link rel="stylesheet" href="/styles/panel-template.css">
