fix: Add CSS to ensure rulers are visible and positioned correctly
- Created canvas-rulers-visible.css with proper z-index and positioning
- Rulers positioned relative to canvas, not viewport
- Vertical ruler starts at left edge of canvas (after sidebar)
- Horizontal ruler starts after vertical ruler
- Unit selector in top-left corner
- Rulers have pointer-events: none to not block canvas interaction

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <link rel="stylesheet" href="/styles/hide-dev-buttons.css">
     <link rel="stylesheet" href="/styles/header-force-visible.css">
     <link rel="stylesheet" href="/styles/tool-labels-fix.css">
+    <link rel="stylesheet" href="/styles/canvas-rulers-visible.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
