--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <link rel="stylesheet" href="/styles/header-force-visible.css">
     <link rel="stylesheet" href="/styles/tool-labels-fix.css">
     <link rel="stylesheet" href="/styles/canvas-rulers-visible.css">
+    <link rel="stylesheet" href="/styles/readability-and-visual-language.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
