fix: CRITICAL - Remove BottomDrawer from grid flow, make it fixed overlay
- BottomDrawer now position: fixed (overlay, not in layout flow)
- Removed app-timeline-container from grid (was causing black gap)
- Grid now: header | main | footer (3 rows, not 4)
- Applied emergency CSS fix
- Canvas now 100% height/width in container
- BottomDrawer slides up as overlay, doesn't push content

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <link rel="stylesheet" href="/styles/readability-and-visual-language.css">
     <link rel="stylesheet" href="/styles/canvas-z-stack-fix.css">
     <link rel="stylesheet" href="/styles/bottom-drawer.css">
+    <link rel="stylesheet" href="/styles/layout-emergency.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
