fix: CRITICAL - Keep chat input in right drawer, NOT timeline
- Created dev-chat-container-fix.css with aggressive containment rules
- Input area MUST stay in DevChatbot container in RightSidebar
- Explicitly hide any chat input that appears in timeline/footer
- Added isolation and containment to prevent CSS bleeding
- Input uses position: relative (NOT fixed/absolute) to stay in flow
- Loaded CSS file LAST in index.html to override all other styles
- This fixes the critical UX issue where input was appearing in wrong location

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
     <link rel="stylesheet" href="/styles/canvas-z-stack-fix.css">
     <link rel="stylesheet" href="/styles/bottom-drawer.css">
     <link rel="stylesheet" href="/styles/layout-emergency.css">
+    <!-- CRITICAL: Must be last to override all dev-chat CSS and prevent input from escaping to timeline -->
+    <link rel="stylesheet" href="/styles/dev-chat-container-fix.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
         :root {
