fix: CRITICAL - Force chat input to stay in right drawer, fix CORB error
- Enhanced CSS to aggressively hide any chat input in timeline/footer
- Removed open-dyslexic.css CDN link to prevent CORB errors
- Added explicit positioning rules to prevent input escaping container
- Chat input already has id/name attributes (dev-chat-input)
- Input MUST stay in dev-chat-wrapper in RightSidebar, NOT timeline

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,0..200&display=swap" rel="stylesheet" />
     <!-- OpenDyslexic font for dyslexia-friendly accessibility option -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/open-dyslexic@1.0.0/css/open-dyslexic.css">
+    <!-- Removed external CDN link to prevent CORB errors - font can be loaded locally if needed -->
     <link rel="stylesheet" href="/styles/xibalba-framework-theme-exact.css">
     <link rel="stylesheet" href="/styles/xibalba-design-language.css">
     <link rel="stylesheet" href="/styles/xibalba-enforce.css">
